# shardindex

./: .gitignore  .hermes.md  .shardindex.db  CHANGELOG.md  Cargo.toml  NEXT_TODO.md  README.md  mustfix.md  needfix.md
.hermes/plans/: 2026-05-22_231500-shardindex-next-phase.md  2026-05-22_233000-shardindex-remaining-work.md  phase4-token-estimation.md  phase8-trait-completion.md
benches/: benchmarks.rs  db_bench.rs  parser_bench.rs
benchmarks/edit_plan/: edit_plan_benchmark.py  edit_plan_benchmark_report.md  edit_plan_complete_results.json  run_final_complete.py
benchmarks/fastapi/: BENCHMARK_PLAN.md  BENCHMARK_RESULTS.md  README.md
prompts/: shardindex_skill_v1.md
references/: benchmark-report-2026-05-27.md  completion-report-2026-05-23.md  masterplan.md  nextimpl.md  nexttodo.md
src/: agent_cache.rs  compression.rs  config.rs  cross_language.rs  cross_reference_strings.rs  daemon.rs  error.rs  fallback.rs  integrity.rs  lib.rs  main.rs  recovery.rs  search.rs  token_budget.rs  token_estimation.rs  watcher.rs
src/cli/: mod.rs
src/database/: mod.rs  schema.rs
src/format/: mod.rs  smart_yaml.rs  toon.rs
src/graph/: mod.rs
src/indexer/: ast.rs  bash.rs  c.rs  cpp.rs  csharp.rs  css.rs  dart.rs  elixir.rs  go.rs  graphql.rs  haskell.rs  java.rs  javascript.rs  julia.rs  kotlin.rs  lua.rs  markdown.rs  mod.rs  php.rs  python.rs  ruby.rs  rust.rs  scala.rs  sql.rs  swift.rs  tests.rs  typecript.rs  types.rs  typescript.rs  vue.rs  zig.rs
src/mcp/: mod.rs  stdio.rs
tests/: integration_test.rs
