[package]
name = "shardindex"
version = "0.1.0"
edition = "2024"
description = "Semantic code graph index — AST-powered middleware for AI agents"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# SQLite
rusqlite = { version = "0.35", features = ["bundled"] }

# Tree-sitter
tree-sitter = "0.25"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"

# Time
chrono = "0.4"

# File integrity
blake3 = "1"
walkdir = "2"

# Config file parsing
toml = "0.8"

# Watch for file changes
notify = "8"

# Dev
tempfile = "3"

# JSON-RPC / MCP server
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# HTTP (MCP transport)
axum = { version = "0.8", features = ["json"] }
tower = "0.5"

# TOON format (LLM-optimized output, replaces Smart YAML)
toon-format = { version = "0.5", default-features = false }

# Dot graph output
petgraph = { version = "0.8", optional = true }
tree-sitter-ruby = "0.23.1"
tree-sitter-java = "0.23.5"
tree-sitter-php = "0.24.2"
tree-sitter-julia = "0.23.1"
tree-sitter-lua = "0.5.0"
tree-sitter-swift = "0.7.2"
tree-sitter-zig = "1.1.2"
tree-sitter-scala = "0.26.0"
tree-sitter-elixir = "0.3.5"
tree-sitter-dart = "0.2.0"
tree-sitter-haskell = "0.23.1"
 tree-sitter-cpp = "0.23.4"
tree-sitter-c = "0.24.2"
tree-sitter-markdown-updated = { version = "0.1.0", package = "tree-sitter-markdown-updated" }
tree-sitter-sequel = "0.3.11"
tree-sitter-graphql = "0.1.0"
tree-sitter-vue-updated = { version = "0.1.0", package = "tree-sitter-vue-updated" }
tree-sitter-css = "0.25.0"
tree-sitter-bash = "0.25.1"
tree-sitter-kotlin-ng = { version = "1.1.0", package = "tree-sitter-kotlin-ng" }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "db_bench"
harness = false

[[bench]]
name = "parser_bench"
harness = false

[[bench]]
name = "benchmarks"
harness = false

[features]
default = []
graphviz = ["petgraph"]
